<resources>
    <string name="app_name">MyRo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="login">Login</string>
    <string name="_2">2</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="basic">Basic</string>
    <string name="advance">Advance</string>
    <string name="pro">Pro</string>
    <string name="hi_user_name">Hi, User Name</string>
    <string name="explore_ai_based_learning_platforms_tailored_for_keen_learners_a2lytics_private_limited_is_an_emerging_software_development_and_training_company_specializing_in_modern_technologies">Explore AI-based learning platforms tailored for keen learners. A2lytics private Limited is an emerging software development and training company specializing in modern technologies.</string>
    <string name="start_your_ai_learning_journey">Start Your AI Learning Journey</string>
    <string name="tap_the_button_to_embark_on_your_path_to_ai_mastery">Tap the button to embark on your path to AI mastery.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="prompt">Prompt</string>
    <string name="response">Response</string>
    <string name="enter_your_prompt">Enter your prompt here…</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="response_will_appear_here">Response will appear here</string>
    <string name="text">Text</string>
    <string name="voice">Voice</string>
    <string name="the_system_response_will_appear_here">The system response will appear here…</string>
    <string name="upload_file">Upload File</string>
    <string name="upload">Upload</string>
    <string name="a2_aboutus">A2lytics Private Limited is a growing software company focused on software development and training.\n\nWe develop software in domains like enterprise solutions, web and mobile applications, data analytics, and digital marketing.\n\nWe provide training in data science, deep learning, full-stack development, cloud computing, DevOps, and more.\n\nWe also offer internships for Diploma, Engineering, BCA, and MCA students, allowing them to work on live projects.</string>
    <string name="help_header"><![CDATA[The \"A2\" app provides three user interfaces to interact with the AI model for task completion:]]></string>
    <string name="basicmode_text"><![CDATA[1. Basic Mode: Users enter their query text in the “PROMPT” field and click the “SUBMIT” button. The AI model’s response will be displayed in the “RESPONSE” field.]]></string>
    <string name="advanceMode_text"><![CDATA[2. Advanced Mode: Users can choose a format—either “TEXT” or “VOICE”—to input their query and receive a response. Then, they simply click “SUBMIT.”]]></string>
    <string name="proMode_text"><![CDATA[3. Pro Mode: Users upload a “PDF” file to ask questions based on its content.]]></string>
    <string name="help_bottom"><![CDATA[For more assistance, please reach out via the provided WhatsApp contact on the top right corner.]]></string>
    <string name="_1_basic_information">1. Basic Information</string>
    <string name="mobile_no">Mobile No</string>
    <string name="welcome_msg">Welcome to A2 \n The AI based learning platform</string>
    <string name="_2_address">2. Address</string>
    <string name="enter_your_address_here">Enter your address here…</string>
    <string name="_3_educational_details">3. Educational Details</string>
    <string name="school_name">School Name</string>
    <string name="c_lass">Class</string>
    <string name="education_board">Education Board</string>
    <string name="studying_image">studying image</string>
    <string name="nourish_your_ninner_skills">Nourish your\ninner skills</string>
    <string name="a">A</string>
    <string name="your_ai_learning_journey_nbegins_here">Your AI learning journey \nbegins here</string>
    <string name="share_with_friends"><![CDATA[Share with friends \n& \nLearn Together, Grow Together]]></string>
    <string name="share">Share</string>
    <string name="brief_detailed">Brief / Detailed:</string>
    <string name="creativity">Creativity:</string>
    <string name="ai_parameters">AI Parameters</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="phone_no">Phone No.</string>
    <string name="default_web_client_id">873819220180-5117mocm14unbl6ijkls33h1hssqsf3o.apps.googleusercontent.com</string>
    <string name="name_of_your_college">Name of your College</string>
    <string name="name_of_your_education_board">Name of your Education Board</string>
    <string name="class_you_are_studying_in">Class you are studying in</string>
    <string name="save_changes">Save Changes</string>
    <string name="what_you_say_will_be_displayed_here">What you say will be displayed here...</string>
    <string name="click_here_to_start_recording">Click here to start recording 👉</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_email">Enter Email</string>

    <string-array name="college_distances">
        <item>College A - 2 km</item>
        <item>College B - 3.5 km</item>
        <item>College C - 5 km</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>