<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signup_background2"
    tools:context=".Sign_Up">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003"
        app:srcCompat="@drawable/myro_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="118dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alata"
        android:text="@string/sign_up_here"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:autofillHints="name"
        android:drawableStart="@drawable/user_logo"
        android:drawablePadding="20dp"
        android:ems="10"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#444141"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/mail_logo"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#444141"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:autofillHints="phone"
        android:drawableStart="@drawable/phone_icon"
        android:layout_marginTop="8dp"
        android:drawablePadding="15dp"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#444141"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/password_logo"
        android:layout_marginTop="8dp"
        android:drawablePadding="15dp"
        android:ems="10"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#444141"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/continue_with"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:drawableStart="@drawable/google_logo"
        android:drawablePadding="15dp"
        android:elevation="16dp"
        android:fontFamily="@font/alata"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:iconPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAccountBtn"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_signup_btn"
        android:elevation="16dp"
        android:fontFamily="@font/artifika"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signINBtn"
        android:layout_width="70dp"
        android:layout_height="16dp"
        android:layout_marginTop="9dp"
        android:background="@android:color/transparent"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        android:text="@string/sign_in"
        android:longClickable="false"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="textStart"
        android:textColor="#1135FF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/createAccountBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>